--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
 body {
     background-color: black;
 }
+
+.yeah-this-web-design-sucks-but-whatever {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    width: calc(100% - 10%);
+    border: 1px solid red;
+    border-radius: 6px;
+    margin-top: 20px;
+}
+
+.yeah-this-web-design-sucks-but-whatever img {
+    display: block;
+    border: 1px solid blue;
+    border-radius: 6px;
+    margin: 20px auto; /* Change margin to 20px top/bottom and auto left/right */
+    text-align: center;
+    max-height: 500px;
+}
+
+h1 {
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
