--- a/style.css
+++ b/style.css
@@ -21,7 +21,16 @@ body {
     max-height: 500px;
 }
 
-h1 {
+h1, p {
     color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+p {
+    color: rgba(255,255,255,0.1); 
+    display:block;
+    text-align: center; 
+    margin: 5px auto;
+    margin-bottom: 1000px;
+
 }
