--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body {
     border: 1px solid red;
     border-radius: 6px;
     margin-top: 20px;
+
+    background-image: url('res/speed.gif'); /* Replace with the path to your GIF file */
+    background-size: contain;
 }
 
 .yeah-this-web-design-sucks-but-whatever img {
@@ -19,6 +22,8 @@ body {
     margin: 20px auto; /* Change margin to 20px top/bottom and auto left/right */
     text-align: center;
     max-height: 500px;
+
+
 }
 
 h1, p {
