--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .yeah-this-web-design-sucks-but-whatever {
-    display: block;
+    display: none;
     margin: 0 auto;
     text-align: center;
     width: calc(100% - 10%);
@@ -50,7 +50,7 @@ p {
 }
 
 .y {
-    display: block;
+    display: none;
     margin: 0 auto;
     text-align: center;
     width: calc(100% - 10%);
@@ -60,7 +60,30 @@ p {
 }
 
 .p {
+    display: none;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.e {
+    display: none;
+}
+
+#x {
     display: block;
     margin: 0 auto;
     text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    background-color: #444;
+    border: 1px solid white;
+    border-radius: 6px;
+    padding: 8px 16px;
+    font-size: 24px;
+}
+
+#foot2 {
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 340px;
 }
