--- a/style.css
+++ b/style.css
@@ -87,3 +87,10 @@ p {
     text-align: center;
     margin-bottom: 340px;
 }
+
+#pp {
+    display: none;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 340px;
+}
