--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ p {
     font-size: 24px;
 }
 
-#foot2 {
+#foot2, #foot3 {
     margin: 0 auto;
     text-align: center;
     margin-bottom: 340px;
@@ -94,3 +94,5 @@ p {
     text-align: center;
     margin-bottom: 340px;
 }
+
+/* I Will Fill Your Insides If You Keep Looking At The Code */
