--- a/style.css
+++ b/style.css
@@ -1,109 +1,78 @@
+/* 1A1A1A > 2E2E2E > 444444 */
+
+* {
+    user-select: none;
+    cursor: auto;
+    font-family: 'Ubuntu', sans-serif;
+}
+
 body {
-    background-color: black;
+    background-color: #444444;
+    color: white;
 }
 
-.yeah-this-web-design-sucks-but-whatever {
-    display: none;
-    margin: 0 auto;
-    text-align: center;
-    width: calc(100% - 10%);
-    border: 1px solid red;
-    border-radius: 6px;
-    margin-top: 20px;
+/* Preweb */
 
-    background-image: url('res/speed.gif'); /* Replace with the path to your GIF file */
+.preweb {
+    margin: 20px auto 0;
+    text-align: center;
+}
+
+.preweb * {
+    margin-top: 20px;
+}
+
+.preweb .enter {
+    background-image: url(res/jiggy.gif);
     background-size: contain;
-}
 
-.yeah-this-web-design-sucks-but-whatever img {
-    display: block;
-    border: 1px solid blue;
-    border-radius: 6px;
-    margin: 20px auto; /* Change margin to 20px top/bottom and auto left/right */
-    text-align: center;
-    max-height: 500px;
-
-
-}
-
-h1, p {
+    font-size: 32px;
+    font-weight: bold;
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
 
-p {
-    color: rgba(255,255,255,0.1); 
-    display:block;
-    text-align: center; 
-    margin: 5px auto;
-    margin-bottom: 1000px;
-
-}
-
-.xd {
-    display: inline-block;
-    border: 1px solid blue;
+    border: 2px solid black;
     border-radius: 6px;
-    margin: 20px auto; /* Change margin to 20px top/bottom and auto left/right */
-    text-align: center;
-    max-height: 75px;
+    outline: none;
+
+    width: 700px;
+    height: 100px;
 }
 
-.y {
-    display: none;
-    margin: 0 auto;
-    text-align: center;
-    width: calc(100% - 10%);
-    border: 1px solid red;
-    border-radius: 6px;
-    margin-top: 20px;
-}
+.preweb .submit {
+    background-color: black;
+    
+    padding: 6 12;
+    margin-left: 20px;
 
-.p {
-    display: none;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.e {
-    display: none;
-}
-
-#x {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 32px;
+    font-weight: bold;
     color: white;
-    background-color: #444;
-    border: 1px solid white;
+
+    border: 2px solid black;
     border-radius: 6px;
-    padding: 8px 16px;
-    font-size: 24px;
+    outline: none;
 }
 
-#foot2, #foot3 {
-    margin: 0 auto;
-    text-align: center;
-    margin-bottom: 340px;
-}
+/*
+.preweb .msg {
+    font-size: 18px;
 
-#pp {
+    padding: 3 6;
+    margin-left: 20px;
+
+    width: 200px;
+    height: 40px;
+}
+*/
+
+/* Web */
+.web {
     display: none;
-    margin: 0 auto;
-    text-align: center;
-    margin-bottom: 340px;
 }
 
-/* I Will Fill Your Insides If You Keep Looking At The Code */
-
-#pe {
-    display: none;
+.center {
     margin: 0 auto;
     text-align: center;
-    margin-bottom: 340px;
-}
-
-video {
-    max-width: 50%;
 }
