--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 
 .preweb .submit {
     background-color: black;
-    
+
     padding: 6 12;
     margin-left: 20px;
 
@@ -77,7 +77,8 @@ body {
     text-align: center;
 }
 
-.proof, .wisewords {
+.proof,
+.wisewords {
     margin-bottom: 450px;
 }
 
@@ -86,12 +87,12 @@ body {
 }
 
 .x {
-    color: rgba(255,255,255,0);
+    color: rgba(255, 255, 255, 0);
     transition: ease-in 0.2s;
 }
 
 .x:hover {
-    color: rgba(255,255,255,0.5);
+    color: rgba(255, 255, 255, 0.5);
     transition: ease-out 0.2s;
 }
 
